k8s/manifest/base/monitoring/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: monitoring
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
