k8s/manifest/base/monitoring/node-exporter.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: kube-system
  name: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9100"
        prometheus.io/path: /metrics
    spec:
      containers:
        - name: node-exporter
          image: prom/node-exporter:v1.12.1-distroless
          ports:
            - containerPort: 9100
          securityContext:
            readOnlyRootFilesystem: true
