k8s/manifest/base/monitoring/pushgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pushgateway
  labels:
    app: pushgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pushgateway
  template:
    metadata:
      labels:
        app: pushgateway
    spec:
      containers:
        - name: pushgateway
          image: prom/pushgateway:v1.11.4-distroless
          ports:
            - containerPort: 9091
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9091
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9091
          args:
            - --web.external-url=http://otknoy-k8s/pushgateway/
            - --web.route-prefix=/
          securityContext:
            readOnlyRootFilesystem: true

---

apiVersion: v1
kind: Service
metadata:
  name: pushgateway-svc
spec:
  selector:
    app: pushgateway
  ports:
    - port: 9091
