k8s/manifest/base/monitoring/snmp-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snmp-exporter
  labels:
    app: snmp-exporter
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0%
      maxSurge: 10%
  selector:
    matchLabels:
      app: snmp-exporter
  template:
    metadata:
      labels:
        app: snmp-exporter
    spec:
      containers:
        - name: snmp-exporter
          image: prom/snmp-exporter:v0.28.0
          ports:
            - containerPort: 9116

---

apiVersion: v1
kind: Service
metadata:
  name: snmp-exporter-svc
spec:
  selector:
    app: snmp-exporter
  ports:
    - port: 9116
